apps/website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: website
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app: website
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: website
          image: ghcr.io/tues-2026-pbl-11-klas/websaitut/website:20260419212400-feed07a # {"$imagepolicy": "flux-system:website"}
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 3
            timeoutSeconds: 3
            failureThreshold: 20
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
